--- a/pom.xml
+++ b/pom.xml
@@ -34,16 +34,34 @@
 		<guava.version>15.0</guava.version>
 		<mysql.conector.version>8.0.28</mysql.conector.version>
 		<json.version>20231013</json.version>
-		<log4j.version>1.2.16</log4j.version>
+		<log4j2.version>2.22.0</log4j2.version>
 		<jaxb.version>2.3.0</jaxb.version>
 		<slf4j.version>1.6.6</slf4j.version>
 		<metrics.version>3.0.2</metrics.version>
 		<poi.version>4.1.1</poi.version>
 		<webapp.version>8.5.11.3</webapp.version>
+		<junit5.version>5.10.1</junit5.version>
 	</properties>
-
+	<dependencies>
+		
+	</dependencies>	
 	<dependencyManagement>
 		<dependencies>
+			<dependency>
+				<groupId>org.junit.jupiter</groupId>
+				<artifactId>junit-jupiter-api</artifactId>
+				<version>${junit5.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.junit.jupiter</groupId>
+				<artifactId>junit-jupiter-engine</artifactId>
+				<version>${junit5.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.junit.jupiter</groupId>
+				<artifactId>junit-jupiter-params</artifactId>
+				<version>${junit5.version}</version>
+			</dependency>
 			<dependency>
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-lang3</artifactId>
@@ -60,9 +78,14 @@
 				<version>1.1.3</version>
 			</dependency>
 			<dependency>
-				<groupId>log4j</groupId>
-				<artifactId>log4j</artifactId>
-				<version>1.2.16</version>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-api</artifactId>
+				<version>${log4j2.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-core</artifactId>
+				<version>${log4j2.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.slf4j</groupId>
@@ -233,8 +256,11 @@
 				<artifactId>urlrewritefilter</artifactId>
 				<version>4.0.4</version>
 			</dependency>
-			
-
+			<dependency>
+				<groupId>com.maxmind.db</groupId>
+				<artifactId>maxmind-db</artifactId>
+				<version>3.1.0</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<build>
