jooq, replace casper dataset to jsonarray

--- a/opinion-library-core/pom.xml
+++ b/opinion-library-core/pom.xml
@@ -59,5 +59,9 @@
 			<artifactId>opinion-payments</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.jooq</groupId>
+			<artifactId>jooq</artifactId>
+		</dependency>
 	</dependencies>
 </project>
