--- a/pom.xml
+++ b/pom.xml
@@ -261,6 +261,16 @@
 				<artifactId>maxmind-db</artifactId>
 				<version>3.1.0</version>
 			</dependency>
+			<dependency>
+				<groupId>com.paypal.sdk</groupId>
+				<artifactId>merchantsdk</artifactId>
+				<version>2.6.109</version>
+			</dependency>
+			<dependency>
+				<groupId>org.jooq</groupId>
+				<artifactId>jooq</artifactId>
+				<version>3.19.1</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<build>
