--- a/opinion-infrastructure/pom.xml
+++ b/opinion-infrastructure/pom.xml
@@ -60,6 +60,10 @@
 			<artifactId>maxmind-db</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.jooq</groupId>
+			<artifactId>jooq</artifactId>
+		</dependency>
+		<dependency>
         <groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
 			<scope>test</scope>
