--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.inqwise.opinion</groupId>
+	<parent>
+		<groupId>com.inqwise.opinion</groupId>
+		<artifactId>opinion-parent</artifactId>
+		<version>1</version>
+	</parent>
+
 	<artifactId>opinion</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
@@ -28,8 +33,6 @@
 	</modules>
 
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>10</java.version>
 		<commons.lang.version>2.5</commons.lang.version>
 		<guava.version>33.0.0-jre</guava.version>
 		<mysql.conector.version>8.0.28</mysql.conector.version>
@@ -40,7 +43,6 @@
 		<metrics.version>3.0.2</metrics.version>
 		<poi.version>4.1.1</poi.version>
 		<githubwebapp.version>8.5.11.3</githubwebapp.version>
-		<junit5.version>5.10.1</junit5.version>
 		<testcontainers.version>1.19.3</testcontainers.version>
 	</properties>
 	<dependencies>
@@ -293,7 +295,6 @@
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.7.0</version>
 				<configuration>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
