--- a/opinion-app-admin/pom.xml
+++ b/opinion-app-admin/pom.xml
@@ -36,6 +36,10 @@
 			<artifactId>urlrewritefilter</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-text</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.inqwise.opinion</groupId>
 			<artifactId>opinion-facade</artifactId>
 			<version>${project.version}</version>
@@ -49,13 +53,6 @@
 	<build>
 		<sourceDirectory>src/main/webapp</sourceDirectory>
 		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.7.0</version>
-				<configuration>
-					<release>10</release>
-				</configuration>
-			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
