--- a/opinion-app-site/pom.xml
+++ b/opinion-app-site/pom.xml
@@ -22,17 +22,8 @@
 			<artifactId>urlrewritefilter</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>javax.xml.ws</groupId>
-			<artifactId>jaxws-api</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>com.sun.xml.ws</groupId>
 			<artifactId>jaxws-rt</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.liferay</groupId>
-			<artifactId>org.apache.commons.fileupload</artifactId>
-			<version>1.2.2.LIFERAY-PATCHED-1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.poi</groupId>
@@ -49,6 +40,15 @@
 		<dependency>
 			<groupId>net.sf.supercsv</groupId>
 			<artifactId>super-csv</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-text</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.liferay</groupId>
+			<artifactId>org.apache.commons.fileupload</artifactId>
+			<version>1.2.2.LIFERAY-PATCHED-1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.googlecode.gettext-commons</groupId>
@@ -81,13 +81,6 @@
 	<build>
 		<sourceDirectory>src/main/webapp</sourceDirectory>
 		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.7.0</version>
-				<configuration>
-					<release>10</release>
-				</configuration>
-			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
