--- a/opinion-infrastructure/pom.xml
+++ b/opinion-infrastructure/pom.xml
@@ -40,8 +40,8 @@
 			<artifactId>json</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.mchange</groupId>
