--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
 	</modules>
 
 	<properties>
+		<stack.version>1.0.0-SNAPSHOT</stack.version>
 		<commons.lang.version>2.5</commons.lang.version>
 		<guava.version>33.0.0-jre</guava.version>
 		<mysql.conector.version>8.0.28</mysql.conector.version>
@@ -51,6 +52,13 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
+				<groupId>com.inqwise.opinion</groupId>
+				<artifactId>opinion-dependencies</artifactId>
+				<version>${stack.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<!--dependency>
 				<groupId>org.junit.jupiter</groupId>
 				<artifactId>junit-jupiter-api</artifactId>
 				<version>${junit5.version}</version>
@@ -241,7 +249,6 @@
 				<groupId>javax.servlet</groupId>
 				<artifactId>javax.servlet-api</artifactId>
 				<version>4.0.1</version>
-				<!--scope>provided</scope -->
 			</dependency>
 			<dependency>
 				<groupId>com.sun.xml.ws</groupId>
@@ -288,7 +295,7 @@
 				<groupId>org.testcontainers</groupId>
 				<artifactId>junit-jupiter</artifactId>
 				<version>${testcontainers.version}</version>
-			</dependency>
+			</dependency!-->
 		</dependencies>
 	</dependencyManagement>
 	<build>
