--- a/opinion-app-admin/pom.xml
+++ b/opinion-app-admin/pom.xml
@@ -52,7 +52,14 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<sourceDirectory>src/main/webapp</sourceDirectory>
+		<resources>
+			<resource>
+				<directory>${basedir}/src/main/webapp</directory>
+			</resource>
+			<resource>
+				<directory>${basedir}/src/main/resources</directory>
+			</resource>
+		</resources>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
