--- a/opinion-app-collector/pom.xml
+++ b/opinion-app-collector/pom.xml
@@ -13,6 +13,7 @@
 		<dependency>
 			<groupId>org.tuckey</groupId>
 			<artifactId>urlrewritefilter</artifactId>
+			<version>4.0.3</version>
 		</dependency>
 		<dependency>
 			<groupId>com.inqwise.opinion</groupId>
@@ -26,19 +27,13 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<sourceDirectory>src/main/webapp</sourceDirectory>
-		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<release>10</release>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<version>2.3</version>
-			</plugin>
-		</plugins>
+		<resources>
+			<resource>
+				<directory>${basedir}/src/main/webapp</directory>
+			</resource>
+			<resource>
+				<directory>${basedir}/src/main/resources</directory>
+			</resource>
+		</resources>
 	</build>
 </project>
