--- a/opinion-app-admin/pom.xml
+++ b/opinion-app-admin/pom.xml
@@ -50,6 +50,11 @@
 			<artifactId>opinion-cms</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-web</artifactId>
+    		<version>2.14.1</version> 
+		</dependency>
 	</dependencies>
 	<build>
 		<resources>
