--- a/opinion-app-site/src/main/resources/WEB-INF/web.xml
+++ b/opinion-app-site/src/main/resources/WEB-INF/web.xml
@@ -1,10 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
   <display-name>opinion-opinion</display-name>
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-  </welcome-file-list>
+  <servlet-mapping>   
+    <servlet-name>default</servlet-name>
+    <url-pattern>*.html</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>default</servlet-name>
+    <url-pattern>*.jpg</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+ <servlet-name>default</servlet-name>
+    <url-pattern>*.png</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>default</servlet-name>
+    <url-pattern>*.css</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>default</servlet-name>
+    <url-pattern>*.js</url-pattern>
+  </servlet-mapping>
   <servlet>
     <servlet-name>DataPostmaster</servlet-name>
     <servlet-class>com.inqwise.opinion.handlers.DataPostmaster</servlet-class>
@@ -21,18 +37,7 @@
     <servlet-name>Index</servlet-name>
     <url-pattern>/go/index.jsp</url-pattern>
   </servlet-mapping>
-  <filter>
-    <filter-name>UrlRewriteFilter</filter-name>
-    <filter-class>org.tuckey.web.filters.urlrewrite.UrlRewriteFilter</filter-class>
-    <init-param>
-      <param-name>logLevel</param-name>
-      <param-value>WARN</param-value>
-    </init-param>
-  </filter>
-  <filter-mapping>
-    <filter-name>UrlRewriteFilter</filter-name>
-    <url-pattern>/*</url-pattern>
-  </filter-mapping>
+  
   <session-config>
     <session-timeout>30</session-timeout>
   </session-config>
@@ -89,12 +94,22 @@
     <servlet-name>Opinions</servlet-name>
     <url-pattern>/servlet/opinions</url-pattern>
   </servlet-mapping>
-  
+  <filter>
+    <filter-name>UrlRewriteFilter</filter-name>
+    <filter-class>org.tuckey.web.filters.urlrewrite.UrlRewriteFilter</filter-class>
+    <init-param>
+      <param-name>logLevel</param-name>
+      <param-value>WARN</param-value>
+    </init-param>
+  </filter>
+  <filter-mapping>
+    <filter-name>UrlRewriteFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
   	<!-- Don't force SSL on notify.jsp -->
-	<security-constraint>
+	<!-- security-constraint>
 		<web-resource-collection>
 			<web-resource-name>Notify page, accessed internally by application</web-resource-name>
-			<url-pattern>/en-us/login</url-pattern>
 			<url-pattern>/en-us/register</url-pattern>
 			<url-pattern>/en-us/forgot-password</url-pattern>
 			<url-pattern>/en-us/change-password</url-pattern>
@@ -117,7 +132,7 @@
 		<user-data-constraint>
 			<transport-guarantee>CONFIDENTIAL</transport-guarantee>
 		</user-data-constraint>
-	</security-constraint>
+	</security-constraint-->
 	
 	<!-- Force SSL for entire site -->
 	<security-constraint>
