--- a/opinion-app-collector/pom.xml
+++ b/opinion-app-collector/pom.xml
@@ -25,6 +25,11 @@
 			<artifactId>javax.servlet-api</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-web</artifactId>
+    		<version>2.14.1</version> 
+		</dependency>
 	</dependencies>
 	<build>
 		<resources>
