--- a/opinion-app-collector/src/main/resources/WEB-INF/web.xml
+++ b/opinion-app-collector/src/main/resources/WEB-INF/web.xml
@@ -33,7 +33,7 @@
 		<filter-class>org.tuckey.web.filters.urlrewrite.UrlRewriteFilter</filter-class>
 		<init-param>
 			<param-name>logLevel</param-name>
-			<param-value>DEBUG</param-value>
+			<param-value>WARN</param-value>
 		</init-param>
 	</filter>
 	<filter-mapping>
