--- a/opinion-app-site/pom.xml
+++ b/opinion-app-site/pom.xml
@@ -75,6 +75,10 @@
 			<artifactId>opinion-cms</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-web</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
