--- a/opinion-app-collector/pom.xml
+++ b/opinion-app-collector/pom.xml
@@ -31,9 +31,46 @@
 		</dependency>
 	</dependencies>
 	<build>
+		<plugins>
+			<plugin>
+	            <groupId>org.apache.maven.plugins</groupId>
+	            <artifactId>maven-war-plugin</artifactId>
+	            <version>3.4.0</version>
+	            <configuration>
+					<packagingExcludes>WEB-INF/classes/**/*</packagingExcludes>
+					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+						</manifest>
+					</archive>
+        			<webResources>
+						<resource>
+                			<directory>${basedir}/src/main/webapp</directory>
+                			<filtering>false</filtering>
+							<excludes>
+								<exclude>**/*.psd</exclude>
+								<exclude>**/*.ai</exclude>
+								<exclude>**/*.db</exclude>
+								<exclude>**/*.rar</exclude>
+								<exclude>**/*.swf</exclude>
+								<exclude>**/*.fla</exclude>
+							</excludes>
+						</resource>
+						<resource>
+							<directory>${project.build.directory}</directory>
+							<include>/${project.artifactId}-${project.version}-classes.jar</include>
+							<targetPath>WEB-INF/lib</targetPath>
+							<filtering>false</filtering>
+						</resource>
+        			</webResources>
+
+				</configuration>
+	        </plugin>
+		</plugins>
 		<resources>
 			<resource>
 				<directory>${basedir}/src/main/webapp</directory>
+				<targetPath>${project.build.directory}/webapp</targetPath>
 			</resource>
 			<resource>
 				<directory>${basedir}/src/main/resources</directory>
